--- a/messaging-playground/docker/docker-compose.yml
+++ b/messaging-playground/docker/docker-compose.yml
@@ -10,3 +10,27 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+  kafka:
+    image: confluentinc/cp-kafka:8.0.3
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_KRAFT_MODE: "true"
+
+      CLUSTER_ID: "my-cluster-1"
+      KAFKA_NODE_ID: 1
+
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+
+      KAFKA_LOG_DIRS: tmp/kafka-logs
+    volumes:
+      - kafka_kraft:/tmp/kafka-logs
+volumes:
+  kafka_kraft:
