--- a/messaging-playground/docker/Dockerfile.rabbitmq
+++ b/messaging-playground/docker/Dockerfile.rabbitmq
@@ -1,6 +1,4 @@
 FROM rabbitmq:3.13-management
 
-RUN apt-get update \
-  && apt-get install -y python3-pip \
-  && pip3 install --no-cache-dir rabbitmqadmin \
-  && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
+COPY . .
