--- a/messaging-playground/docker/docker-compose.yml
+++ b/messaging-playground/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   rabbitmq:
     build:
-      context: .
-      dockerfile: Dockerfile.rabbitmq
+      context: ..
+      dockerfile: docker/Dockerfile.rabbitmq
     container_name: rabbitmq
     ports:
       - "5672:5672" # AMQP
